<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- menu -->
    <string name="optNewGame">New Game</string>
    <string name="optDernierPli">Last Trick</string>
    <string name="optScores">Scores</string>
    <string name="optResetScores">Reset</string>
    <string name="optStats">Stats</string>
    <string name="optChangeName">Change player\'s name</string>
    <string name="optInfos">Credits</string>
    <string name="optQuit">Quit</string>
    
    <!-- Activity -->
    <string name="namePlayer">Player</string>
    
    <string name="lepreneur">the attack</string>
    <string name="ladefense">the defense</string>
    
    <string name="passe">Passe</string>
    <string name="prise">Prise</string>
    <string name="garde">Garde</string>
    <string name="gardesans">Garde Sans</string>
    <string name="gardecontre">Garde Contre</string>

    <string name="btnvaliderpoignee">Valid Poignée</string>
    <string name="btnvaliderecart">Valid Discard</string>
    <string name="btnscores">Scoring</string>
    <string name="btnencheres">Bids</string>

	<string name="txtcalcul1">{0} did a {1}. </string>
	<string name="txtcalcul2">{0} marks {1} points for {2} (==> {3} oudler(s).\r\n).</string>
	<string name="txtcalcul3chute">{0} falls ({1} points). </string>
	<string name="txtcalcul3passe">{0} wins ({1} points).\r\n</string>
	<string name="txtcalcul4">Poignées : {0} points.\r\n</string>
	<string name="txtcalcul5">Points for the attack : {0}{1}x({2} + 25 + {3}) = {4} points.\r\n</string>
	<string name="txtcalcul6petitbout">Points for Petit at last trick: {0} for {1}.\r\n</string>
	<string name="txtcalculscore">{0} : {1} ==> {2}.\r\n</string>
	
	<string name="textchien">{0} is the attack! </string>
	<string name="dialogchien">Here is The kitty : </string>
	<string name="dialogpoignee">{0} shows a {1} hand.</string>
	<string name="dialogaskpoignee">Do you want to show a {0} hand?</string>
	<string name="dialogaskquit">Are you sure you want to quit?\r\n(the current game won\'t be saved)</string>
	
	<string name="txtannonce">What is your bid?</string>
	
	<!-- Erreurs -->
	<string name="errorcantplaycarte">You can\'t play this card.</string>
	<string name="errorchien">You must choose 6 cards.</string>
	<string name="errorpoignee">You must choose some other trumps to complete your hand.</string>
	<string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
	<string name="erroroptionnotavailable">Option not available at this time.</string>
	
	<!-- Infos -->
	<string name="infonobodytakes">Nobody\'s taking!</string>
	<string name="inforesetscores">Scores erased!</string>
	<string name="inforesetstats">Stats erased!</string>
	
	<!-- Divers -->
	<string name="yes">Yes</string>
	<string name="no">No</string>
    <string name="rules">www.pagat.com/tarot/frtarot.html</string>
	<string name="app_name">TarotDroid</string>
	<string name="app_name_version">TarotDroid - v0.13</string>
	<string name="app_version">0.12</string>
	
	<!-- Stats -->
	<string name="gamesTotal">Nb Games played : </string>
	<string name="gamesWin">Nb Games won (attack) : </string>
	<string name="gamesWinTeam">Nb Games won (defense) : </string>
	<string name="gamesLost">Nb Games lost (attack) : </string>
	<string name="gamesLostTeam">Nb Games lost (defense) : </string>
	<string name="gamesTaken">Nb Games taken : </string>
	<string name="gamesPrise">Nb Prises : </string>
	<string name="gamesGarde">Nb Gardes : </string>
	<string name="gamesGardeSans">Nb Garde Sans : </string>
	<string name="gamesGardeContre">Nb Garde Contre : </string>
	<string name="btnStatsCLose">Close</string>
	<string name="btnStatsReset">Reset</string>
</resources>