<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id= "@+id/optionDernierPli"
        android:title="@string/optDernierPli">
    </item>
    <item
        android:id="@+id/optionNewGame"
        android:title="@string/optNewGame">
    </item>
    <item
        android:id="@+id/optionScores"
        android:title="@string/optScores">
    </item>
    <item
        android:id="@+id/optionStats"
        android:title="@string/optStats">
    </item>
    <item
        android:id="@+id/optionQuit"
        android:title="@string/optQuit">
    </item>
    <item
        android:id="@+id/optionResetScores"
        android:title="@string/optResetScores">
    </item>
    <item
        android:id= "@+id/optionChangeName"
        android:title="@string/optChangeName">
    </item>
    <item
        android:id="@+id/optionInfos"
        android:title="@string/optInfos">
    </item>
</menu>